# tilescale

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  HDA.md  README.md  format.sh  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  setup.py
.github/workflows/: ci.yml  dist.yml
benchmark/distributed/: benchmark_ag_gemm.py  benchmark_all_gather.py  benchmark_all_to_all.py  benchmark_gemm_rs.py  benchmark_ipc_p2p.py  benchmark_reduce_scatter.py  utils.py
docs/: conf.py  merge_upstream_tilelang.md
docs/get_started/: Installation.md  run_example.md
examples/cast/: example_group_per_split_token_cast_to_fp8.py  example_per_token_cast_to_fp8.py
examples/deepseek_deepep/: deepep.md  utils.py
examples/deepseek_mla/: example_mla_decode.py
examples/dequantize_gemm/: example_dequant_gemm_fp4_hopper.py
examples/distributed/: README.md  ag_utils.py  example_all_to_all.py  example_allgather.py  example_allgather_gemm.py  example_allgather_gemm_ipc.py  example_allgather_gemm_overlapped.py  example_allgather_gemm_overlapped_debug.py  example_allgather_gemm_overlapped_experimental.py  example_allgather_gemm_overlapped_fast_sync.py  example_allgather_gemm_overlapped_persistent.py  example_cannon.py  example_cluster_copy.py  example_cluster_launch.py  example_gemm_rs.py  example_gemm_rs_overlapped.py  example_get_warp.py  example_nvshmem.py  example_overlapping_allgather.py  example_post_attn_all2all_transpose.py  example_pre_attn_all2all.py  example_pre_attn_all2all_ipc.py  example_pre_attn_all2all_transpose.py  example_pull_warp.py  example_push_warp.py  example_remote_copy.py  example_simple_shift.py  example_sp_ag_attention_intra_node.py  example_sp_all2all_attention_intra_node.py  example_sparse_mla_fp8_decode.py  example_summa.py  gemm_rs_kernel.py  gemm_rs_utils.py  marlin_dequant_gemm_benchmark.py  reduce_scatter.py  sp_ag_attention_intra_node.py  sp_all2all_attention_intra_node.py  sp_ulysess_o_all2all_gemm.py  sparse_mla_decode_utils.py  test_llm_ulysess_all2all_gemm_intra_node.py  (+3 more)
examples/flash_attention/: example_mha_fwd_varlen.py
examples/gemm_fp8/: example_tilelang_gemm_fp8_2xAcc.py
examples/gemm_splitk/: example_tilelang_gemm_splitk.py
examples/norm/: rms_norm.py
hda_configs/nvidia/: DGX-B200.yaml
src/: ir.cc
src/layout/: layout.cc  utils.cc
src/op/: builtin.cc  builtin.h  bulk_copy.cc  copy.cc  copy.h  distributed.cc  distributed.h  elem.cc  gemm.cc  gemm.h  logical.cc  math.cc  op.h  parallel.cc  reduce.cc  remote_copy.cc  remote_copy.h  sync.cc  sync.h
src/runtime/: runtime.cc  tilescale_cuda_module.cc  tilescale_cuda_module.h
src/transform/: annotate_device_regions.cc  cluster_planning.cc  config_index_bitwidth.cc  declare_symm_buffer.cc  eliminate_storage_sync_for_mbarrier.cc  flatten_buffer.cc  frontend_legalize.cc  if_stmt_binding.cc  inject_fence_proxy.cc  inject_pipeline.cc  inject_ptx_async_copy.cc  inject_tma_barrier.cc  layout_inference.cc  legalize_safe_memory_access.cc  legalize_vectorized_loop.cc  loop_vectorize.cc  loop_vectorize_dynamic.cc  lower_cpengine_intrin.cc  simplify.cc  (+21 more)
tilelang/: __init__.py  _ffi_api.py  env.py
tilelang/distributed/common/: README.md  __init__.py  ipc_ext.cpp  pyproject.toml  setup.py
tilelang/distributed/common/ipc_ext/: __init__.py  ipc_ext.cpp
tilelang/distributed/pynvshmem/: CMakeLists.txt  setup.py
tilelang/distributed/pynvshmem/python/_pynvshmem/: __init__.pyi
tilelang/distributed/pynvshmem/python/pynvshmem/: __init__.py
tilelang/distributed/pynvshmem/src/: pynvshmem.cc
tilelang/distributed/pynvshmem/testing/python/: test_nvshmem_create_tensor.py  test_nvshmem_query.py
tilelang/utils/alloc_cuda/: pyproject.toml  setup.py
tilelang/utils/alloc_cuda/alloc_cuda/: __init__.py  tensor_from_ptr.cpp
(+173 files in other folders)
