[build-system]
requires = ["setuptools>=65", "wheel", "torch", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "ipc_ext"
version = "0.1.0"
description = "TileLang IPC extension (PyTorch C++/CUDA extension)."
requires-python = ">=3.8"
authors = [{name = "Yu Cheng"}]
license = "MIT"

[tool.setuptools]
packages = ["ipc_ext"]